--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
     </div>
     <div class="container">
 
-        <h1 class="mbr-section-title mbr-normal align-left mbr-white pb-4 mbr-fonts-style display-1">Let's find your dream home.</h1>
+        <h1 class="mbr-section-title mbr-normal align-left mbr-white pb-4 mbr-fonts-style display-1"><br>Let's find your dream home.</h1>
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-12 col-md-10 col-sm-12 align-center" data-form-type="formoid">
 
                 <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                <form class="mbr-form form-with-styler" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VUC7Iy5YfLuSnvYFG4HpJplJZoTdZKnwkHhpbnBZwmlmwJpa+xNZr1QdvxoR67wAaJWXHdF2fJu+n1uTC1JXFil3uFR0ITqSn7rPsovxDW6pS1i5gASAi/LnayT/kuHO">
+                <form class="mbr-form form-with-styler" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lyNugipHsF/rsvVdBOwKlBK8VDUKxnk8zXlFCv4bhqxZAt8z4+ORE8ZLRaWCh+ORubQSN8z+HAW78cD5muOw8U74hqFx+CnHuwixMxANx2679aRbkjym1FpmSPFnsRzg">
                     <div class="row row-sm-offset">
                         <div class="col-lg-3 col-md-6" data-for="name">
                             <div class="form-group">
@@ -282,6 +282,80 @@
     </div>
 </section>
 
+<section class="features3 cid-r3iemIgJ0f mbr-parallax-background" id="features03-m">
+
+    
+
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(101, 101, 101);">
+    </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <h2 class="mbr-section-title pb-2 mbr-normal mbr-fonts-style align-center display-2">
+                    <div class="title">
+                        Resource Center</div></h2>
+            </div>
+        </div>
+        <div class="row row-content justify-content-center">
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/mbr-2-696x431.jpg" title="" alt="">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style mbr-normal display-5">Why use a Realtor when buying a home?</h4>
+                        <p class="mbr-text mbr-fonts-style mbr-normal display-4">
+                            Lorem ipsum dolor sit amet, consectetur elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum mattis,
+                            turpis purus.
+                        </p>
+                        <div class="mbr-section-btn"><a href="page3.html#header7-n" class="btn btn-primary-outline-2 display-4"><span class="mbrib-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
+                                Read More</a></div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/mbr-696x420.jpg" title="" alt="">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style mbr-normal display-5">Ways to Finance a home?</h4>
+                        <p class="mbr-text mbr-fonts-style mbr-normal display-4">
+                            Lorem ipsum dolor sit amet, consectetur elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum mattis,
+                            turpis purus.<br><br>
+                        </p>
+                        <div class="mbr-section-btn"><a href="page3.html#header7-o" class="btn btn-primary-outline-2 display-4"><span class="mbrib-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
+                                Read More</a></div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/mbr-2-696x465.jpg" title="" alt="">
+                    </div>
+                    <div class="card-box">
+                        <h4 class="card-title mbr-fonts-style mbr-normal display-5">What is a Homeowners Association?</h4>
+                        <p class="mbr-text mbr-fonts-style mbr-normal display-4">
+                            Lorem ipsum dolor sit amet, consectetur elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum mattis,
+                            turpis purus.
+                        </p>
+                        <div class="mbr-section-btn"><a href="page3.html#header7-p" class="btn btn-primary-outline-2 display-4"><span class="mbrib-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
+                                Read More</a></div>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</section>
+
 <section class="testimonials1 cid-r28HC0w2Ab" id="testimonials01-7">
 
     
@@ -421,7 +495,7 @@
                 <h2 class="title2 mbr-fonts-style mbr-bold display-5">
                     Contact Form</h2>
                 <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UUY2RlImkkaIDVNDrUTn8Taz7HhLTWln/8515tRm3IAmhKzefmqCcCaNO87cMmIWeBdc4ZXd8FNNbZ5y0xQEJ+V0DHVSqgmAnjL78ncmOJTISED5P1Gg49E0AvsfgUJT" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SEWZLZyuuv0PWlgwfu2HK9u0j+fa1NYOQ7bwFhfTh+Qp70xvwk4PXCjTFFy3umr5bfbFMMi0ojEbmy05vrxOFULQa3yWBX4z2cvE40PoTYh7qeG8waqjvkXQ8oz6egI3" data-form-field="Email">
                     <div class="row row-sm-offset">
                         <div class="col-md-6 multi-horizontal" data-for="name">
                             <div class="form-group">
